# findevil

./: .gitignore  EXECUTION_GUIDE.md  LICENSE  PROJECT_PROGRESS.md  README.md  pyproject.toml
cases/cfreds-data-leakage-pc/: manifest.json  run_analysis.sh
cases/realistic-windows-case/: manifest.json  run_analysis.sh
docs/: ACCURACY_REPORT.md  ARCHITECTURE.md  ARTIFACT_TREE_VALIDATION.md  CFREDS_DATA_LEAKAGE_VALIDATION.md  CREATE_DEMO_CASE.md  DATASETS.md  DEMO_VIDEO_SCRIPT.md  DEVPOST_DEMO_NARRATION.txt  DEVPOST_DRAFT.md  DEVPOST_SUBMISSION.md  EXECUTION_LOGS.md  HACKATHON_COMPLIANCE_CHECK.md  LOCAL_UTM.md  NO_VM.md  NTFS_IMAGE_VALIDATION.md  REMOTE_SIFT.md  SETUP_SIFT.md
findevil/: __init__.py  case_data.py  cli.py  evaluation.py  mcp_server.py  orchestrator.py  reasoning.py  remote.py  reporting.py  schemas.py  store.py  tools.py  utils.py  verification.py
scripts/: bootstrap_utm_sift_vm.py  build_devpost_demo_video.sh  create_ntfs_image_from_artifact_tree.sh  create_realistic_artifact_tree.py  create_windows_artifacts.ps1  demo_terminal_session.sh  download_cfreds_data_leakage_case.sh  generate_devpost_narration_openai.sh  generate_openai_thumbnail.py  image_and_analyze.sh  install_sift_guest_payload.sh  install_sift_in_guest.sh  print_demo_highlights.sh  rebuild_utm_sift_vm.sh  record_devpost_live_demo.sh  render_demo_video.sh  render_devpost_terminal_thumbnail.sh  render_devpost_thumbnail.sh  render_devpost_thumbnail_clean.sh  render_devpost_thumbnail_safe_variants.sh  render_devpost_thumbnail_variants.sh  sift_tool_bridge.py
tests/: test_analysis.py
(+36 files in other folders)
