[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "findevil"
version = "0.1.0"
description = "CaseTrace: a read-only, self-correcting DFIR agent for SIFT."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Jaafar Banar" }
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.30.0"]

[tool.setuptools]
packages = ["findevil"]

